<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jtanuki.go.thaichang.RegisterActivity">


    <include layout ="@layout/app_bar_layout"
        android:id="@+id/regPageToolbar"/>

    <Button
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/logPassword"
        android:layout_marginEnd="47dp"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/CreateAccount"
        android:textColor="@color/White"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="224dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/displayName"
        android:layout_above="@+id/logPassword"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="91dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/logEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logPassword"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText5"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="19dp"
            android:layout_weight="1"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/logPassword">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/logPassword"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="31dp"
            android:layout_weight="1"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/CreateANewAccount"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="56dp" />


</RelativeLayout>
