<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grandient_background3"
    tools:context="com.jtanuki.go.thaichang.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="wrap_content"
        android:foregroundGravity="center_horizontal"

        android:layout_height="wrap_content"

        android:adjustViewBounds="false"
        android:background="@color/Clear"
        android:scaleX=".7"
        android:scaleY=".7"
        android:src="@drawable/defaultprofileuser"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/settings_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/change_status"

        android:foregroundGravity="center_horizontal"
        android:textColor="@color/White"
        android:textColorHighlight="@color/Honeydew"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="224dp"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/settings_image_button" />

    <Button
        android:id="@+id/settings_image_button"
        android:elevation="5dp"
        android:layout_width="wrap_content"
        android:textColorHighlight="@color/White"
        android:layout_height="wrap_content"
android:foregroundGravity="center_horizontal"
        android:backgroundTint="@color/Honeydew"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        android:paddingTop="5dp"
        android:text="@string/change_image"
        android:textColor="@color/Black"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="224dp"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/settings_status_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
android:foregroundGravity="center_horizontal"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@color/White"
        android:shadowRadius="5"
        android:text="@string/profile_name"
        android:textColor="@color/Black"

        android:textSize="30sp"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:shadowColor="@color/White"
        android:textColor="@color/Black"

        android:shadowRadius="5"
        android:text="@string/profile_status"
        android:textSize="20sp"
        android:layout_below="@+id/profile_name"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
